--- a/SIDS.Plugin.Misc.BetterBreadCrumb.csproj
+++ b/SIDS.Plugin.Misc.BetterBreadCrumb.csproj
@@ -2,13 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-	  <OutputPath>..\..\Presentation\Nop.Web\Plugins\Nop.Plugin.Misc.BetterBreadCrumb</OutputPath>
+	  <OutputPath>..\..\Presentation\Nop.Web\Plugins\SIDS.Plugin.Misc.BetterBreadCrumb</OutputPath>
     <OutDir>$(OutputPath)</OutDir>
     <!--Set this parameter to true to get the dlls copied from the NuGet cache to the output of your project.
     You need to set this parameter to true if your plugin has a nuget package 
     to ensure that the dlls copied from the NuGet cache to the output of your project-->
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\SchemaMigration.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Remove="logo.jpg" />
@@ -46,6 +50,7 @@
     <Folder Include="Areas\Admin\Factories\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
