--- a/SIDS.Plugin.Misc.BetterBreadCrumb.csproj
+++ b/SIDS.Plugin.Misc.BetterBreadCrumb.csproj
@@ -18,6 +18,8 @@
     <None Remove="logo.jpg" />
 	<None Remove="plugin.json" />
     <None Remove="Areas\Admin\Views\_ViewImports.cshtml" />
+    <None Remove="Views\Configure.cshtml" />
+    <None Remove="Views\_ViewImports.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +29,10 @@
     <Content Include="plugin.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Views\Configure.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Views\_ViewImports.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -51,7 +57,6 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Extensions\" />
     <Folder Include="Migrations\" />
-    <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
  
