--- a/SIDS.Plugin.Misc.BetterBreadCrumb.csproj
+++ b/SIDS.Plugin.Misc.BetterBreadCrumb.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-	  <OutputPath>..\..\Presentation\Nop.Web\Plugins\SIDS.BetterBreadCrumb</OutputPath>
+    <TargetFramework>net9.0</TargetFramework>
+	  <OutputPath>$(SolutionDir)\Presentation\Nop.Web\Plugins\SIDS.BetterBreadCrumb</OutputPath>
     <OutDir>$(OutputPath)</OutDir>
     <!--Set this parameter to true to get the dlls copied from the NuGet cache to the output of your project.
     You need to set this parameter to true if your plugin has a nuget package 
@@ -36,8 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
-    <ProjectReference Include="..\..\Presentation\Nop.Web\Nop.Web.csproj" />
+    <ProjectReference Include="$(SolutionDir)\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
+    <ProjectReference Include="$(SolutionDir)\Presentation\Nop.Web\Nop.Web.csproj" />
     <ClearPluginAssemblies Include="$(MSBuildProjectDirectory)\..\..\Build\ClearPluginAssemblies.proj" />
   </ItemGroup>
 
@@ -59,10 +59,14 @@
     <Folder Include="Migrations\" />
     <Folder Include="Services\" />
   </ItemGroup>
- 
+
   <!-- This target execute after "Build" target -->
   <Target Name="NopTarget" AfterTargets="Build">
-    <MSBuild Projects="@(ClearPluginAssemblies)" Properties="PluginPath=$(MSBuildProjectDirectory)\$(OutDir)" Targets="NopClear" />
+    <!-- Delete unnecessary libraries from plugins path -->
+    <MSBuild Projects="@(ClearPluginAssemblies)" Properties="PluginPath=$(OutDir)" Targets="NopClear" />
+    <!-- Delete extra folders and files from plugin output directory -->
+    <RemoveDir Directories="$(OutDir)\App_Data;$(OutDir)\Areas;$(OutDir)\Plugins;$(OutDir)\Themes" />
+    <Delete Files="$(OutDir)\appSsettings.json;$(OutDir)\appsettings.Development.json;$(OutDir)\web.config"/>
   </Target>
 
 </Project>
